# BittorentClient

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CmakeLists.txt  Decoder.cpp  Decoder.h  Main.cpp
src/Bittorent/: CmakeLists.txt  Main.cpp
src/Bittorent/CommandLineParser/: CommandLineParser.cpp  CommandLineParser.h
src/Decoder/: CmakeLists.txt  Decoder.cpp  Decoder.h
src/FileUtils/: CmakeLists.txt  FileUtils.cpp  FileUtils.h
tests/: CmakeLists.txt
tests/FileUtils/: UT_FileUtils.cpp
tests/Parser/: UT_Parser.cpp
